--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "debug": "~2.2.0",
     "express": "~4.14.0",
     "hjs": "~0.0.6",
+    "knex": "^0.12.6",
     "morgan": "~1.7.0",
+    "mysql": "^2.12.0",
     "node-compass": "0.2.3",
     "nodemon": "^1.11.0",
     "serve-favicon": "~2.3.0"
