--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "mysql": "^2.12.0",
     "node-compass": "0.2.3",
     "nodemon": "^1.11.0",
+    "passport": "^0.3.2",
     "serve-favicon": "~2.3.0"
   }
 }
