--- a/package.json
+++ b/package.json
@@ -29,10 +29,13 @@
   },
   "dependencies": {
     "angular": "^1.5.9",
+    "bcrypt": "^0.8.7",
     "body-parser": "~1.15.2",
+    "connect-ensure-login": "^0.1.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "express": "~4.14.0",
+    "express-session": "^1.14.2",
     "hjs": "~0.0.6",
     "knex": "^0.12.6",
     "morgan": "~1.7.0",
@@ -40,6 +43,7 @@
     "node-compass": "0.2.3",
     "nodemon": "^1.11.0",
     "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "serve-favicon": "~2.3.0"
   }
 }
