--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "debug": "~2.2.0",
     "express": "~4.14.0",
     "express-session": "^1.14.2",
+    "fabric": "^1.7.1",
     "hjs": "~0.0.6",
     "knex": "^0.12.6",
     "morgan": "~1.7.0",
@@ -41,7 +42,7 @@
     "nodemon": "^1.11.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
-    "serve-favicon": "~2.3.0",
+    "serve-favicon": "~2.3.0"
   },
   "devDependencies": {
     "angular": "^1.5.9",
