resolves bugs of routes/plateinfo.js

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "fabric": "^1.7.1",
     "hjs": "~0.0.6",
     "knex": "^0.12.6",
+    "mongodb": "^2.2.15",
     "morgan": "~1.7.0",
     "mysql": "^2.12.0",
     "nodemon": "^1.11.0",
