--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
   "dependencies": {
     "bcrypt": "^0.8.7",
     "body-parser": "~1.15.2",
+    "connect-mongo": "^1.3.2",
+    "cookie": "^0.3.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "express": "~4.14.0",
@@ -44,7 +46,8 @@
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "q": "^1.4.1",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "socket.io": "^1.7.2"
   },
   "devDependencies": {
     "angular": "^1.5.9",
