--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "mysql": "^2.12.0",
     "nodemon": "^1.11.0",
     "passport": "^0.3.2",
+    "passport-ldapauth": "^1.0.0",
     "passport-local": "^1.0.0",
     "serve-favicon": "~2.3.0",
     "socket.io": "^1.7.2"
