resolve bugs, add help modal, add blurring on ignore.

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,6 @@ doIt!
 # plate folder
 public/assets/plates
 public/assets/pelak.zip
+public/assets/test
+public/TrainingPatches
+public/plates.json
