add stat button and some incomplete code! resolve minor bugs. add cropping of characters code.

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "express": "~4.14.0",
     "express-session": "^1.14.2",
     "hjs": "~0.0.6",
+    "jimp": "^0.2.27",
     "knex": "^0.12.6",
     "mongodb": "^2.2.15",
     "morgan": "~1.7.0",
